accommodating smaller screens, fixed header image stretch

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
     font-family: NotoSans;
     flex-direction: column;
     min-height: 100vh;
+    min-width: 508px;
     max-width: 85%;
     justify-content: center;
     margin: auto;
@@ -23,6 +24,7 @@ body {
     border: 2px solid #E0E0E0;
     color: #E0E0E0;
     background-color: #121212;
+    word-wrap: normal;
 }
 
 header {
@@ -40,6 +42,7 @@ header {
 }
 
 header img {
+    height: max-content;
     width: 240px;
     border-radius: 30px;
 }
@@ -115,6 +118,7 @@ footer {
 .sectionContent {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 20vh;
 }
@@ -127,6 +131,7 @@ footer {
 #skills {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     min-height: calc(100vh - 44px);
     scroll-margin-top: 42px;
 }
@@ -134,8 +139,8 @@ footer {
 .skill {
     flex: 1;
     margin: 50px;
-    height: fit-content;
-    width: fit-content;
+    max-height: fit-content;
+    max-width: fit-content;
     border: 2px solid #E0E0E0;
     border-radius: 30px;
     padding: 25px;
@@ -158,6 +163,7 @@ footer {
 #projects {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     border-top: 2px solid #E0E0E0;
     min-height: calc(100vh - 44px);
     scroll-margin-top: 40px;
@@ -166,8 +172,8 @@ footer {
 .project {
     flex: 1;
     margin: 20px;
-    height: fit-content;
-    width: fit-content;
+    max-height: fit-content;
+    max-width: fit-content;
     border: 2px solid #E0E0E0;
     border-radius: 30px;
     padding: 25px;
@@ -192,6 +198,7 @@ footer {
 #contact {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     border-top: 2px solid #E0E0E0;
     min-height: calc(100vh - 42px - 38.4px);
     scroll-margin-top: 36px;
@@ -199,8 +206,8 @@ footer {
 
 .contactItem {
     margin: 20px;
-    height: fit-content;
-    width: fit-content;
+    max-height: fit-content;
+    max-width: fit-content;
     border: 2px solid #E0E0E0;
     border-radius: 30px;
     padding: 25px;
@@ -233,6 +240,7 @@ footer {
     position: fixed;
     top: 0;
     width: calc(85% - 20px) !important;
+    min-width: 488px;
     border-top: 2px solid #E0E0E0;
     margin: 0px auto 42px auto;
 }
